Fix overflow with article elements

--- a/styling.css
+++ b/styling.css
@@ -14,11 +14,10 @@ body {
 }
 
 .container {
-    min-height: 100vh;
     display: grid;
     background-color:  #ddd6fe;
     grid-template-columns: 1.25fr 5fr;
-    grid-template-rows: .5fr 5fr;
+    grid-template-rows: .5fr 4fr;
     padding: 0;
     margin: 0;
 }
@@ -69,6 +68,7 @@ body {
     grid-template-columns: repeat(3, 5rem);
     gap: 25px;
     justify-content: right;
+    align-items: center;
 }
 
 .actions > * {
@@ -126,7 +126,7 @@ input {
     background-color: #8b5cf6;
     grid-row: 1/3;
     grid-column: 1/2;
-    grid-template-rows: 50px minmax(2vh, .5fr) 1fr;
+    grid-template-rows: 50px .5fr 1fr;
     gap: 15px;
     color: white;
     font-family: "Oswald", sans-serif;
@@ -169,9 +169,11 @@ input {
 }
 
 
+
+
 .content{
     grid-template-columns: 2fr .75fr;
-    grid-template-rows: repeat(auto-fit, minmax(50px, .5fr));
+    grid-template-rows: .5fr .75fr;
     gap: 15px;
     padding: 20px;
 }
@@ -191,7 +193,7 @@ input {
     border-radius: 10px;
     background-color: white;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px 1fr 50px;
+    grid-template-rows: 50px .5fr 50px;
 }
 
 .iconBar {
@@ -223,7 +225,7 @@ p {
 
 .yourProject {
     grid-row: 1/3;
-    grid-template: 15px repeat(auto-fit, minmax(50px, .25fr)) / repeat(auto-fit, minmax(300px, 2fr));
+    grid-template: 15px repeat(auto-fit, minmax(100px, .5fr)) / repeat(auto-fit, minmax(300px, 2fr));
     gap: 15px;
 }
 
@@ -231,9 +233,14 @@ p {
     grid-column: 1/-1;
 }
 
-.announcements, .trending {
+.announcement {
     gap: 15px;
     grid-template-rows: 1rem .75fr;
+}
+
+.trending {
+    grid-template-rows: 1rem .5fr;
+    gap: 15px;
 }
 
 .announcementList {
@@ -262,11 +269,11 @@ p {
 
 .contacts {
     display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(3rem, 1.5fr));
+    grid-template-rows: repeat(auto-fit, minmax(1rem, 1fr));
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    gap: 15px;
+    gap: 10px;
 }
 
 .indContact {
